# verity-memory

./: Cargo.toml  README.md
src/: lib.rs  utils.rs
src/errors/: aob_scan.rs  mod.rs  read_memory.rs  write_memory.rs
src/macros/: match_number.rs  mod.rs  wide_string.rs
src/ops/: asm.rs  mod.rs  read.rs  write.rs
src/pattern/: algorithm.rs  aob.rs  memory.rs  mod.rs
src/runtime/: mod.rs  vtable.rs
src/types/: instruction.rs  mod.rs
