[package]
name = "verity_memory"
version = "0.1.0"
edition = "2021"

[lib]
name = "verity_memory"
path = "src/lib.rs"
crate-type = ["rlib", "cdylib"]

[dependencies]
libloading = "0.8.5"
ctor = "0.2.8"
tokio = { version = "1", features = ["sync", "rt", "macros"] }
winapi = { version = "0.3", features = ["memoryapi", "processthreadsapi", "handleapi", "sysinfoapi", "libloaderapi"] }
capstone = "0.12.0"
dynasmrt = "3.0.1"