[package]
name = "verity-memory"
version = "0.1.0"
edition = "2021"
description = "A brief description of your crate's functionality."
license = "MIT"
repository = "https://github.com/VerityIncorporated/verity-memory"
homepage = "https://github.com/VerityIncorporated/verity-memory"
documentation = "https://docs.rs/verity-memory"

[lib]
name = "verity_memory"
path = "src/lib.rs"
crate-type = ["rlib", "cdylib"]

[dependencies]
libloading = "0.8.6"
tokio = { version = "1.42.0", features = ["sync", "rt", "macros"] }
winapi = { version = "0.3", features = ["memoryapi", "processthreadsapi", "handleapi", "sysinfoapi", "libloaderapi"] }
capstone = "0.12.0"
dynasmrt = "3.0.1"

[package.metadata.docs.rs]
targets = ["x86_64-pc-windows-msvc"]