[package]
name = "verity-memory"
version = "1.0.4"
edition = "2021"
description = "Personal memory library with some cool features."
license = "MIT"
repository = "https://github.com/VerityIncorporated/verity-memory"
homepage = "https://github.com/VerityIncorporated/verity-memory"
documentation = "https://docs.rs/verity-memory"
readme = "README.md"

[lib]
name = "verity_memory"
path = "src/lib.rs"
crate-type = ["rlib", "cdylib"]

[dependencies]
libloading = "0.8.6"
winapi = { version = "0.3", features = ["memoryapi", "libloaderapi"] }
capstone = { version = "0.12.0", optional = true }
dynasmrt = { version = "3.0.1", optional = true }

[features]
advanced-write = ["capstone", "dynasmrt"]
aob = []
runtime = []

[package.metadata.docs.rs]
targets = ["x86_64-pc-windows-msvc"]